--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16"
   },
+  "name": "securewrap",
+  "version": "1.0.0",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js"  
   }
 }
